--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "construção de api rest",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./app.js"
   },
   "author": "pan yohan dilnae caroline Lauren",
   "license": "MIT",
+  "type": "module",
   "dependencies": {
     "express": "^4.18.2"
   }
